// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should not throw required error with empty, optional emails 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="input-wrapper email"
  >
    <input
      name="email"
      onChange={[Function]}
      type="email"
      value=""
    />
  </div>
</form>
`;

exports[`Input should not throw required error with not required, unchecked checkboxes 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="input-wrapper checkbox"
  >
    <input
      checked={false}
      name="subscribed"
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
  </div>
</form>
`;

exports[`Input should render a validation error 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="input-wrapper text"
  >
    <input
      aria-describedby="name_error"
      aria-invalid={true}
      name="name"
      onChange={[Function]}
      required={true}
      type="text"
      value=""
    />
    <div
      className="input-error"
      id="name_error"
      role="alert"
    >
      Please fill out this field
    </div>
  </div>
</form>
`;

exports[`Input should render correctly 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="input-wrapper text"
  >
    <input
      className="foo"
      name="name"
      onChange={[Function]}
      required={true}
      type="text"
      value="foobar"
    />
  </div>
</form>
`;

exports[`Input should render type=radio: radio: female selected, male unselected 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <form
    noValidate={true}
    onSubmit={[Function]}
  >
    <div>
      <div>
        <div
          className="input-wrapper radio"
        >
          <input
            checked={false}
            name="gender"
            onChange={[Function]}
            type="radio"
            value="male"
          />
        </div>
        ,
        <div
          className="input-wrapper radio"
        >
          <input
            checked={true}
            name="gender"
            onChange={[Function]}
            type="radio"
            value="female"
          />
        </div>
      </div>
    </div>
  </form>
</form>
`;

exports[`Input should render type=radio: radio: male selected, female unselected 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <form
    noValidate={true}
    onSubmit={[Function]}
  >
    <div>
      <div>
        <div
          className="input-wrapper radio"
        >
          <input
            checked={true}
            name="gender"
            onChange={[Function]}
            type="radio"
            value="male"
          />
        </div>
        ,
        <div
          className="input-wrapper radio"
        >
          <input
            checked={false}
            name="gender"
            onChange={[Function]}
            type="radio"
            value="female"
          />
        </div>
      </div>
    </div>
  </form>
</form>
`;

exports[`Input should render validation errors when the form value is not an e-mail 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="input-wrapper email"
  >
    <input
      aria-describedby="email_error"
      aria-invalid={true}
      name="email"
      onChange={[Function]}
      type="email"
      value="foo"
    />
    <div
      className="input-error"
      id="email_error"
      role="alert"
    >
      Please include a valid e-mail address
    </div>
  </div>
</form>
`;

exports[`Input should throw required error with required emails 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="input-wrapper email"
  >
    <input
      aria-describedby="email_error"
      aria-invalid={true}
      name="email"
      onChange={[Function]}
      required={true}
      type="email"
      value=""
    />
    <div
      className="input-error"
      id="email_error"
      role="alert"
    >
      Please fill out this field
    </div>
  </div>
</form>
`;

exports[`Input should throw required error with required, unchecked checkboxes 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="input-wrapper checkbox"
  >
    <input
      aria-describedby="subscribed_error"
      aria-invalid={true}
      checked={false}
      name="subscribed"
      onChange={[Function]}
      required={true}
      type="checkbox"
    />
    <div
      className="input-error"
      id="subscribed_error"
      role="alert"
    >
      Please fill out this field
    </div>
  </div>
</form>
`;

exports[`Input should use checked with type=checkbox 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="input-wrapper checkbox"
  >
    <input
      checked={true}
      name="subscribed"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</form>
`;
